--- a/mission5assignment/Views/Home/MyServices.cshtml
+++ b/mission5assignment/Views/Home/MyServices.cshtml
@@ -8,6 +8,5 @@
 <form >
     <label for="numberHours">Enter the number of hours you want to work with me:</label>
     <input type="text" id="numberHours" name="numberHours">
-    <input type="submit">
-    
+    <input type="submit" value="Calculate Cost">
 </form>
