--- a/mission5assignment/Views/Home/Index.cshtml
+++ b/mission5assignment/Views/Home/Index.cshtml
@@ -20,7 +20,10 @@
     </p>
     
 <h3>Mountain Biking in Utah</h3>
-<p>Mountain biking in Utah offers some of the best trails in the world, with diverse landscapes ranging from red rock deserts to alpine forests. I have been mountain biking on some slick rock trails in Moab and doing so brings me a lot of joy. I know there are amazing trails all over Utah and I am excited to try more of them out but first I need to get a mountain bike of my own.</p>
+<p>Mountain biking in Utah offers some of the best trails in the world, with diverse landscapes ranging from red rock 
+    deserts to alpine forests. I have been mountain biking on some slick rock trails in Moab and doing so brings me a 
+    lot of joy. I know there are amazing trails all over Utah and I am excited to try more of them out but 
+    first I need to get a mountain bike of my own.</p>
 
     
     
