updated services page

--- a/mission5assignment/Views/Home/MyServices.cshtml
+++ b/mission5assignment/Views/Home/MyServices.cshtml
@@ -2,13 +2,12 @@
     ViewData["Title"] = "My Services";
 }
 
-<h1>I am willing to help you get into biking or just have a buddy to go with!</h1>
-<h4>Calcualte Pricing:</h4>
+<h1>Lets go together!</h1>
 
 <div class="container mt-5">
     <div class="card shadow-lg">
         <div class="card-body">
-            <h2 class="text-center mb-4">Work Hours Calculator</h2>
+            <h2 class="text-center mb-4">Calcualte Pricing:</h2>
             <form onsubmit="event.preventDefault(); calculateTotal();">
                 <div class="mb-3">
                     <label for="hours" class="form-label">Enter the number of hours you want to work with me:</label>
