few small updates

--- a/mission5assignment/Views/Shared/_Layout.cshtml
+++ b/mission5assignment/Views/Shared/_Layout.cshtml
@@ -39,7 +39,8 @@
 
 <footer class="border-top footer text-muted">
     <div class="container">
-        &copy; Braden Stevens 2025
+        &copy; <a href="https://www.linkedin.com/in/bradenmstevens" target="_blank"> Braden Stevens</a> 2025
+
     </div>
 </footer>
 <script src="~/lib/jquery/dist/jquery.min.js"></script>
